// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownAutoCompleteMenu renders with a group 1`] = `
<DropdownAutoCompleteMenu
  blendCorner={true}
  emptyMessage="No items"
  isOpen={true}
  items={
    Array [
      Object {
        "items": Array [
          Object {
            "label": <div>
              New Zealand
            </div>,
            "value": "new zealand",
          },
          Object {
            "label": <div>
              Australia
            </div>,
            "value": "australia",
          },
        ],
        "label": "countries",
        "value": "countries",
      },
    ]
  }
  maxHeight={300}
  onSelect={[Function]}
  searchPlaceholder="Filter search"
>
  <AutoComplete
    closeOnSelect={true}
    disabled={false}
    inputIsActor={false}
    isOpen={true}
    itemToString={[Function]}
    onSelect={[Function]}
    resetInputOnClose={true}
    shouldSelectWithEnter={true}
    shouldSelectWithTab={false}
  >
    <DropdownMenu
      closeOnEscape={true}
      isOpen={true}
      keepMenuOpen={false}
      onClickOutside={[Function]}
    >
      <AutoCompleteRoot>
        <Component
          className="css-6v04yn-AutoCompleteRoot egdot0r0"
        >
          <div
            className="css-6v04yn-AutoCompleteRoot egdot0r0"
          >
            Click Me!
            <StyledMenu
              blendCorner={true}
              innerRef={[Function]}
              onClick={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
                className="css-1fwqu7l-StyledMenu-getMenuBorderRadius egdot0r8"
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <StyledInputWrapper>
                  <Base
                    className="css-8ql7bl-StyledInputWrapper egdot0r2"
                  >
                    <div
                      className="css-8ql7bl-StyledInputWrapper egdot0r2"
                      is={null}
                    >
                      <StyledInput
                        autoFocus={true}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Filter search"
                        value=""
                      >
                        <input
                          autoFocus={true}
                          className="css-dqpq6t-Input-inputStyles-StyledInput egdot0r3"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Filter search"
                          value=""
                        />
                      </StyledInput>
                      <InputLoadingWrapper>
                        <Base
                          className="css-7dbbu3-InputLoadingWrapper egdot0r1"
                        >
                          <div
                            className="css-7dbbu3-InputLoadingWrapper egdot0r1"
                            is={null}
                          />
                        </Base>
                      </InputLoadingWrapper>
                    </div>
                  </Base>
                </StyledInputWrapper>
                <div>
                  <StyledItemList
                    maxHeight={300}
                  >
                    <div
                      className="css-5kh8cy-StyledItemList egdot0r9"
                    >
                      <LabelWithBorder
                        key="countries"
                      >
                        <div
                          className="css-o8s6pc-LabelWithBorder egdot0r5"
                        >
                          <GroupLabel>
                            <div
                              className="css-1oz0skv-GroupLabel egdot0r7"
                            >
                              countries
                            </div>
                          </GroupLabel>
                        </div>
                      </LabelWithBorder>
                      <AutoCompleteItem
                        highlightedIndex={0}
                        index={0}
                        key="new zealand-0"
                        onClick={[Function]}
                      >
                        <div
                          className="css-1dzvpw9-AutoCompleteItem egdot0r4"
                          onClick={[Function]}
                        >
                          <div>
                            New Zealand
                          </div>
                        </div>
                      </AutoCompleteItem>
                      <AutoCompleteItem
                        highlightedIndex={0}
                        index={1}
                        key="australia-1"
                        onClick={[Function]}
                      >
                        <div
                          className="css-1sp52yo-AutoCompleteItem egdot0r4"
                          onClick={[Function]}
                        >
                          <div>
                            Australia
                          </div>
                        </div>
                      </AutoCompleteItem>
                    </div>
                  </StyledItemList>
                </div>
              </div>
            </StyledMenu>
          </div>
        </Component>
      </AutoCompleteRoot>
    </DropdownMenu>
  </AutoComplete>
</DropdownAutoCompleteMenu>
`;

exports[`DropdownAutoCompleteMenu renders without a group 1`] = `
<DropdownAutoCompleteMenu
  blendCorner={true}
  emptyMessage="No items"
  isOpen={true}
  items={
    Array [
      Object {
        "label": <div>
          Apple
        </div>,
        "value": "apple",
      },
      Object {
        "label": <div>
          Bacon
        </div>,
        "value": "bacon",
      },
      Object {
        "label": <div>
          Corn
        </div>,
        "value": "corn",
      },
    ]
  }
  maxHeight={300}
  onSelect={[Function]}
  searchPlaceholder="Filter search"
>
  <AutoComplete
    closeOnSelect={true}
    disabled={false}
    inputIsActor={false}
    isOpen={true}
    itemToString={[Function]}
    onSelect={[Function]}
    resetInputOnClose={true}
    shouldSelectWithEnter={true}
    shouldSelectWithTab={false}
  >
    <DropdownMenu
      closeOnEscape={true}
      isOpen={true}
      keepMenuOpen={false}
      onClickOutside={[Function]}
    >
      <AutoCompleteRoot>
        <Component
          className="css-6v04yn-AutoCompleteRoot egdot0r0"
        >
          <div
            className="css-6v04yn-AutoCompleteRoot egdot0r0"
          >
            Click Me!
            <StyledMenu
              blendCorner={true}
              innerRef={[Function]}
              onClick={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
                className="css-1fwqu7l-StyledMenu-getMenuBorderRadius egdot0r8"
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <StyledInputWrapper>
                  <Base
                    className="css-8ql7bl-StyledInputWrapper egdot0r2"
                  >
                    <div
                      className="css-8ql7bl-StyledInputWrapper egdot0r2"
                      is={null}
                    >
                      <StyledInput
                        autoFocus={true}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Filter search"
                        value=""
                      >
                        <input
                          autoFocus={true}
                          className="css-dqpq6t-Input-inputStyles-StyledInput egdot0r3"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Filter search"
                          value=""
                        />
                      </StyledInput>
                      <InputLoadingWrapper>
                        <Base
                          className="css-7dbbu3-InputLoadingWrapper egdot0r1"
                        >
                          <div
                            className="css-7dbbu3-InputLoadingWrapper egdot0r1"
                            is={null}
                          />
                        </Base>
                      </InputLoadingWrapper>
                    </div>
                  </Base>
                </StyledInputWrapper>
                <div>
                  <StyledItemList
                    maxHeight={300}
                  >
                    <div
                      className="css-5kh8cy-StyledItemList egdot0r9"
                    >
                      <AutoCompleteItem
                        highlightedIndex={0}
                        index={0}
                        key="apple-0"
                        onClick={[Function]}
                      >
                        <div
                          className="css-1dzvpw9-AutoCompleteItem egdot0r4"
                          onClick={[Function]}
                        >
                          <div>
                            Apple
                          </div>
                        </div>
                      </AutoCompleteItem>
                      <AutoCompleteItem
                        highlightedIndex={0}
                        index={1}
                        key="bacon-1"
                        onClick={[Function]}
                      >
                        <div
                          className="css-1sp52yo-AutoCompleteItem egdot0r4"
                          onClick={[Function]}
                        >
                          <div>
                            Bacon
                          </div>
                        </div>
                      </AutoCompleteItem>
                      <AutoCompleteItem
                        highlightedIndex={0}
                        index={2}
                        key="corn-2"
                        onClick={[Function]}
                      >
                        <div
                          className="css-1sp52yo-AutoCompleteItem egdot0r4"
                          onClick={[Function]}
                        >
                          <div>
                            Corn
                          </div>
                        </div>
                      </AutoCompleteItem>
                    </div>
                  </StyledItemList>
                </div>
              </div>
            </StyledMenu>
          </div>
        </Component>
      </AutoCompleteRoot>
    </DropdownMenu>
  </AutoComplete>
</DropdownAutoCompleteMenu>
`;

exports[`DropdownAutoCompleteMenu selects 1`] = `[MockFunction]`;
